fixed safari psuedoelement overlap bug

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -83,7 +83,7 @@
     opacity: 0;
     margin: auto;
     text-align: center;
-    transition: all 1s ease-in-out, visibility 1ms ease-in-out 0.5s, opacity 1ms ease-in-out;
+    transition: all 1s ease-in-out, visibility 1ms ease-in-out 0.5s, opacity 1ms ease-in-out, transform 1ms ease-in-out;
 }
 @mixin outlineDimensions($height, $width, $duration, $name, $delay) {
   height: $height;
